clusters/common/apps/flux-system/capacitor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor
  namespace: flux-system
  annotations:
    item.homer.rajsingh.info/name: "Capacitor"
    item.homer.rajsingh.info/subtitle: "Flux UI"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/flux-cd.svg"
    item.homer.rajsingh.info/keywords: "flux, gitops, ui"

    service.homer.rajsingh.info/name: "Utilities"
    service.homer.rajsingh.info/icon: "fas fa-tools"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "capacitor.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: capacitor
          port: 9000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
